--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -1069,3 +1069,16 @@ footer a img {
 .navbar-brand img {
   width: 190px;
 }
+.accordion-button{
+  background-color: black  !important;
+  color: #FBA027;
+  font-size: 1rem;
+  border: 0px;
+}
+.accordion-item{
+  border: 1px solid white;
+  padding: 0px 20px;
+}
+.readMoreBtn{
+  border: 5px solid white;
+}
