--commit new nav bar changes
--commit new nav bar changes

--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -1049,42 +1049,42 @@ ul.bidList_.info_ li.fulwdth {
 .auctionLive .labelList li {
   width: 23%;
 }
-.auctionLive .labelList li:last-child {
-  width: 43%;
-}
-.auctionLive li.butn-shop button.btn {
-  padding: 14px 21px;
-}
-.auctionLive .card_postImg img {
-  min-width: 428px;
-  max-height: 241px !important;
-  object-fit: cover;
-  overflow: hidden !important;
-}
+.auctionLive .labelList li:last-child { width: 43%;}
+.auctionLive li.butn-shop button.btn { padding: 14px 21px;}
+.auctionLive .card_postImg img { min-width: 428px;max-height: 241px !important; object-fit: cover;overflow: hidden !important;}
 
-footer a img {
-  width: 65%;
-}
+footer a img { width: 65%;}
 
-.navbar-brand img {
-  width: 190px;
-}
-.accordion-button{
-  background-color: black  !important;
-  color: #FBA027;
-  font-size: 1rem;
-  border: 0px;
-}
-.accordion-item{
-  border: 1px solid white;
-  padding: 0px 20px;
-}
-.readMoreBtn{
-  border: 5px solid white;
-}
-.navActive{
-  color:#EA5E30;
-}
-.faList{
-  color: #EF6031 !important;
-}
+.navbar-brand img { width: 190px;}
+.accordion-button{ background-color: black  !important; color: #FBA027; font-size: 1rem; border: 0px;}
+.accordion-item{ padding: 0px 20px;}
+.readMoreBtn{border: 5px solid white;}
+.navActive{ color:#EA5E30;}
+.faList{ color: #EF6031 !important;}
+
+
+/* New Css Nik */
+
+li.nav-item.afterLogin { text-align: center;}
+li.nav-item.afterLogin span { font-size: 13px; position: absolute; top: -17px; right: 24px;}
+.secondNavbar .navbar-nav {  justify-content: end;}
+header { height: 103px;border: 1px solid #333;}
+.secondNavbar { padding: 10px 0px; position: relative; right: 0; top: -28px;}
+.toNv:before { content: ''; background: #f7931b; position: absolute; width: 70%; height: 100%; right: -7%; z-index: -2; border-top-left-radius: 50px;}
+.toNv{position: relative;z-index: 1;}
+.secondNavbar .navbar-nav:before { background: #333333; content: ''; position: absolute; width: 90%; height: 100%; right: -6%; z-index: -1; border-top-left-radius: 50px;}
+.secondNavbar .navbar-nav {position: relative;  height: 43px;}
+a.navbar-brand { position: relative;top: 17px;left: -30px;}
+
+li.nav-item.afterLogin span{animation: blink 1s linear infinite;}
+@keyframes blink{0%{opacity: 0;}50%{opacity: .5;}100%{opacity: 1;}}
+.nextArrow { position: absolute; bottom: -20px; left: calc(50% - 140px);}
+
+.nextArrow span.prev:before {  background-image: url('../images/ArrowLeft.svg');  background-position: center left;  top: 5px; right: 15px;}
+.nextArrow span.next:after {  background-image: url('../images/ArrowRight.svg'); background-position: center right; top: 5px; right: -10px;}
+.nextArrow span.prev:before, .nextArrow span.next:after { position: relative; content: ''; display: inline-block; width: 80px; height: 20px; background-size: 80px; background-repeat: no-repeat; z-index: 7;}
+.nextArrow span.prev,.nextArrow span.next{ font-size: 18px !important;}
+p.priceDateList span {font-size: 16px; color: #EF6234; font-weight: 600;}
+.card-body.contSec { padding: 1.25rem 0; background: black;}
+.contSec h5.card-title { margin-bottom: 3px;}
+.accordion-item { border-bottom: 1px solid #2e2d2d !important; padding: 0px 20px;}
