--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -1078,7 +1078,7 @@ a.navbar-brand { position: relative;top: 17px;left: -30px;}
 
 li.nav-item.afterLogin span{animation: blink 1s linear infinite;}
 @keyframes blink{0%{opacity: 0;}50%{opacity: .5;}100%{opacity: 1;}}
-.nextArrow { position: absolute; bottom: -20px; left: calc(50% - 14075px);}
+.nextArrow { position: absolute; bottom: -20px; left: calc(50% - 165px);}
 
 .nextArrow span.prev:before {  background-image: url('../images/ArrowLeft.svg');  background-position: center left;  top: 5px; right: 15px;}
 .nextArrow span.next:after {  background-image: url('../images/ArrowRight.svg'); background-position: center right; top: 5px; right: -10px;}
@@ -1204,7 +1204,9 @@ table.showroomCol tr td:last-child {
  padding-left: 15px;
 }
 
-
+.mt-20 {
+  margin-top: 25px;
+}
 
 
 
@@ -1222,11 +1224,39 @@ table.showroomCol tr td:last-child {
   background-clip: padding-box;
   border: 0;
   border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
-  opacity: .5;
-  transition: opacity .6s ease;
-}
+  border-bottom: 10px solid transparent;  opacity: .5;  transition: opacity .6s ease;}
 
-.carousel-indicators .carousel-indicator.active {
-  opacity: 1;
+.carousel-indicators .carousel-indicator.active {  opacity: 1;}
+
+.ProcessPymt p {  position: relative;  top: -38px;  background: #000;  padding: 10px 15px;  text-align: center;  width: 22%;  margin: 0 auto;}
+.processPy {  text-align: center;  padding: 40px;  border: 1px solid #37230a;}
+.ProcessPymt img {  border: 1px solid #181818;  margin: 5px;  padding: 0 10px;  width: 24%;  background: #000000;}
+.processPy h2 {  font-size: 20px;}
+.searchBody {  padding: 10px;  box-shadow: 1px 4px 36px -1px #f7931a1f;  height: 78vh;  scroll-behavior: auto;  overflow: scroll;  background: #000;}
+.searchBody p {  border-bottom: 1px solid #0000;}
+/* .searchBody p:hover {
+  color: #ffc107;
+  font-size: 15px;
+  transition: 0.5s;
+  border-bottom: 1px solid #ffc107;
+  cursor: pointer;
+} */
+.searchAuto:hover {  background: #000;  border-bottom: 1px solid #ffc107;  cursor: pointer;}
+
+.searchBody::-webkit-scrollbar {
+  width: 1px;
 }
+.searchBody p:first-child {  margin-bottom: 0;  text-transform: uppercase;  font-weight: 600;  color: #ffc107;}
+.searchAuto { background: #121212; padding: 6px; margin-bottom: 10px; border-bottom: 1px solid #373535;}
+/* Track */
+.searchBody::-webkit-scrollbar-track {
+  background: #000; 
+}
+ 
+/* Handle */
+.searchBody::-webkit-scrollbar-thumb {  background: #ffc107; }
+
+/* Handle on hover */
+.searchBody::-webkit-scrollbar-thumb:hover { background: #ffc107;}
+
+img.carGif {  width: 35%;}
