--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -1287,3 +1287,6 @@ a.nav-link.navActive { text-align: left !important;}
 a.nav-link.false { text-align: initial;}
 .searchForm input { background-color: #000000eb;
 }
+.ju367vcf {  border: none !important; background: #f7931b;}
+.lotryBtn button.iekbcc0.iekbcc9 { width: 220px !important;}
+.lotryBtn button.iekbcc0.iekbcc9.ju367v71 { width: 140px !important;}
