--- a/src/Assets/css/lightMode.css
+++ b/src/Assets/css/lightMode.css
@@ -48,5 +48,10 @@ body.light{  background-color: #fff; color: #000;}
 .light .card_Gray { background-color: #f7f7f7;}
 .light .sideBar__ li a {  color: #000;}
 .light .field{ color: #000;}
-.light .modal-content { background-color: #fff0;}
+
 .light .card_ic { background: #f7f7f7;}
+.light .formCard { background-color: #f7f7f7;}
+.light .sallerBox { width: 100%;  border: 1px solid #ffd5a3;}
+.light .modal-content {    background-color: #fff;}
+.light .ProcessPymt img { border: 1px solid #cbcbcb;  background: #ffffff;}
+.light .payTPop button { color: #000;}
