--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -1133,44 +1133,10 @@ table.showroomCol tr td {
   color: #f7931a;
 }
 .card_post.store.auction{position: relative;}
-.card_post.store.auction:before {
-  content: 'For Auctions';
-  
-  width: 150px;
-  height: 150px;
-  right: 0;
-  top: 0;
-  background-repeat: no-repeat;
-  position: absolute;
-  background-position: center;
-  z-index: 1;
-}
-.card_post.store.auction:before {
-  content: 'For Auctions';
-  width: 110px;
-  height: 20px;
-  right: 0;
-  top: 0;
-  background-repeat: no-repeat;
-  position: absolute;
-  background-position: center;
-  z-index: 1;
-  background: #ffc107;
-  text-align: center;
-  color: black;
-  font-size: 12px;
-}
 
-.card_post.store.auction:before {
-  width: 120px;
-  height: 29px;
-  background-color: #f7931a;
-  padding: 0px 2px;
-  text-align: right;
-  font-size: 16px;
-  color: white;
-  
-}
+
+
+
 
 
 table.showroomCol tr td:last-child {
@@ -1228,8 +1194,8 @@ table.showroomCol tr td:last-child {
 
 .carousel-indicators .carousel-indicator.active {  opacity: 1;}
 
-.ProcessPymt p {  position: relative;  top: -38px;  background: #000;  padding: 10px 15px;  text-align: center;  width: 22%;  margin: 0 auto;}
-.processPy {  text-align: center;  padding: 40px;  border: 1px solid #37230a;}
+.ProcessPymt p {  position: relative;  top: 0px;  padding: 10px 15px;  text-align: center;  width: 100%;  margin: 0 auto;}
+.processPy {  text-align: center;  padding: 40px; }
 .ProcessPymt img {  border: 1px solid #181818;  margin: 5px;  padding: 0 10px;  width: 24%;  background: #000000;}
 .processPy h2 {  font-size: 20px;}
 .searchBody {  padding: 10px;  box-shadow: 1px 4px 36px -1px #f7931a1f;  height: 78vh;  scroll-behavior: auto;  overflow: scroll;  background: #000;}
@@ -1258,35 +1224,16 @@ table.showroomCol tr td:last-child {
 
 /* Handle on hover */
 .searchBody::-webkit-scrollbar-thumb:hover { background: #ffc107;}
-
 img.carGif {  width: 35%;}
-
-
-.userTable.MuiDataGrid-root.MuiDataGrid-root--densityStandard.css-1e2bxag-MuiDataGrid-root {
-  color: #fff;
-}
-.lotryBtn {
-  display: flex;
-  width: 100%;
-}
-.lotryBtn > div >button {
-  background: #f7931b !important;
-  border-radius: 5px !important;
-  width: 100% !important;
-  margin-right: 10px !important;
-}
-
-.lotryBtn .Btn > span {
-  background: #f7931b !important;
-  border-radius: 5px !important;
-  padding: 0px 25px !important;
-}
+.userTable.MuiDataGrid-root.MuiDataGrid-root--densityStandard.css-1e2bxag-MuiDataGrid-root { color: #fff;}
+.lotryBtn { display: flex; width: 100%;}
+.lotryBtn > div >button {  background: #f7931b !important;  border-radius: 5px !important;  width: 100% !important;  margin-right: 10px !important;}
+.lotryBtn .Btn > span { background: #f7931b !important;  border-radius: 5px !important;  padding: 0px 25px !important;}
 button.Btn { background: #f7931b !important; }
 #clockdiv { margin: 0 -20px !important;}
 a.nav-link.navActive { text-align: left !important;}
 a.nav-link.false { text-align: initial;}
-.searchForm input { background-color: #000000eb;
-}
+.searchForm input { background-color: #000000eb;}
 .ju367vcf {  border: none !important; background: #f7931b;}
 .lotryBtn button.iekbcc0.iekbcc9 { width: 220px !important;}
 .lotryBtn button.iekbcc0.iekbcc9.ju367v71 { width: 140px !important;}
@@ -1300,3 +1247,38 @@ ul.slick-dots { display: none !important;}
 label { font-size: 12px;}
 .post-excerpt { padding: 0px 70px;}
 .post-excerpt h2 { font-size: 21px; margin-top: 50px; border-bottom: 1px solid #dedede; padding-bottom: 6px;}
+.payTPop button { background: transparent; border: transparent; color: #fff; font-size: 18px;}
+.payTPop .modal-content { border: 0px solid rgba(0,0,0,.2); background: #000; top: 90px;}
+.payTPop .modal-header { border-bottom: 1px solid #1b1b1b00;}
+.payTPop .modal-content { border: 0px solid rgba(0,0,0,.2); background: #000; top: 90px; box-shadow: 1px 1px 65px 0px #ffd7a738; border-radius: 10px;}
+.payTPop .modal-content { border: 0px solid rgba(0,0,0,.2); background: #000; top: 90px; box-shadow: 1px 1px 65px 0px #ffd7a738; border-radius: 10px; border: 1px solid #37230a; padding: 10px;}
+.processPy {  text-align: center;  padding: 40px;  border-top: 1px solid #37230a;}
+.payTPop button{color: #fff;}
+li.reserved { text-align: -webkit-left;  animation: blink 1s linear infinite; color: #f7931b; font-weight: 700; border-bottom: 1px solid #f7931b;}
+.title_Center { text-transform: capitalize;}
+p.forOction {
+  padding: 1px 8px;
+  text-align: right;
+  background: #f7931b;
+  width: 23%;
+  position: absolute;
+  right: 0;
+  z-index: 1;
+  top: 0;
+  font-size: 12px;
+  margin: 3px;
+  text-transform: uppercase;
+}
+li.reserved {
+  text-align: -webkit-left;
+  animation: blink 1s linear infinite;
+  color: #007bff;
+  font-weight: 700;
+  border-bottom: 1px solid #f7931b;
+  background: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #e90009, #f9a825, #ff5722);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 22px;
+  position: relative;
+  top: -11px;
+}
