--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -747,6 +747,14 @@ body.lightTheme{background-color: #fff; color: #000;}
     background-size: cover;
     position: relative;
 }
+.shopHeroSection{
+  padding: 50px 0px;
+    min-height: 500px;
+    background: url(../images/shop-banner.png) center no-repeat;
+    background-size: contain;
+    position: relative;
+
+}
 
 .pagination{}
 .pagination .page-item{padding: 0px 2px;}
@@ -1342,4 +1350,57 @@ button.iekbcc0.iekbcc9.ju367v73.ju367v7o.ju367v9c.ju367vn.ju367vec.ju367vex.ju36
   display: flex;
   justify-content: center;
   align-items: baseline;
+}
+
+.shop img {
+animation-name: spin;
+  animation-duration: 5000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear; 
+}
+@keyframes spin {
+  from {
+      transform:rotate(0deg);
+  }
+  to {
+      transform:rotate(360deg);
+  }
+}
+.heroText.shop {
+  position: relative;
+  left: -450px;
+  top: -37%;
+}
+.shop h1 span:before {
+  content: '';
+  background: #fff;
+  width: 127px;
+  height: 2px;
+  position: absolute;
+  top: 41%;
+  left: 26%;
+}
+.shop h1 span {
+  display: block;
+  font-size: 24px;
+  position: relative;
+  left: 5%;
+  letter-spacing: 2px;
+}
+.shop h1 span:after {
+  content: '';
+  background: #fff;
+  width: 54px;
+  height: 2px;
+  position: absolute;
+  top: 41%;
+  right: 36%;
+}
+.shopPg .card_postImg_200 {
+  height: 310px !important;
+  align-items: flex-start;
+}
+.shop h1 {
+  margin-bottom: 28px;
+  font-size: 50px;
 }
